# budouy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-demo.yml
demo/: index.html
examples/: html_parse.rs  japanese_split.rs
src/: html_processor.rs  lib.rs  main.rs  model.rs  parser.rs  wasm.rs
tests/: parser.rs
